Fix truncation width The commit message column in the dashboard is limited to 300px width, so the .truncate class shouldn't use a wider width.

--- a/client/styles/strider.less
+++ b/client/styles/strider.less
@@ -28,7 +28,7 @@ body {
 }
 
 .truncate {
-  width: 340px;
+  width: 300px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
